load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# FWIW, Gazelle being primarily a Go BUILD file-creation tool, also acts as a
# linter/formatter/beautifier for BUILD files: side-effect being to reduce whitespace-based thrash
# on change.

# gazelle:prefix github.com/chickenandpork/bazel-redis-unittest
gazelle(name = "gazelle")

#go_library(
#    name = "go_default_library",
#    srcs = [
#        "main.go",
#        "oldnu.go",
#    ],
#    importpath = "github.com/chickenandpork/bazel-redis-unittest",
#    visibility = ["//visibility:private"],
#    deps = ["@com_github_chickenandpork_gopherlol//commands:go_default_library"],
#)

# GOIMPORTS
# Simple method of formatting (opinionated, fairly common standard) the few go files in the
# platform repo.  Equivalent of a `goimports -w ./...`
load("@com_github_atlassian_bazel_tools//goimports:def.bzl", "goimports")

goimports(
    name = "goimports",
    display_diffs = True,
    prefix = "//tools",
    write = True,
)

go_test(
    name = "go_default_test",
    srcs = ["redis_test.go"],
    deps = [
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//wait",
    ],
)
